--- a/src/stylesheets/perso.css
+++ b/src/stylesheets/perso.css
@@ -261,21 +261,17 @@ li.submenu.selected > a  {
 }
 
 /* Modal */
+.modal {
+	background-clip: border-box;
+	margin-top:0px !important;
+}
 
-.modaladmin {
-   background-clip: padding-box;
-    background: none repeat scroll 0 0 #DDDDDD;
-    border: 1px solid rgba(0, 0, 0, 0.3);
-    border-radius: 6px 6px 6px 6px;
-    bottom: 40px;
-    box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
-    left: 20px;
-	right:20px;
-	bottom:40px;
+#ModalAdmin {
 	top:40px;
-    overflow: auto;
-    position: fixed;
-    z-index: 1050;
+}
+
+#myModal {
+	top:25%
 }
 
 .modal-header {
@@ -284,7 +280,6 @@ li.submenu.selected > a  {
 	background: -webkit-linear-gradient(-90deg, #A0E800, #64C800) repeat scroll 0 0 transparent;
 	background: -ms-linear-gradient(-90deg, #A0E800, #64C800) repeat scroll 0 0 transparent;
 	background: linear-gradient(-90deg, #A0E800, #64C800) repeat scroll 0 0 transparent;
-	
     border-radius: 2px 2px 2px 2px;
     box-shadow: 0 2px 2px black;
     color: white;
@@ -295,27 +290,11 @@ li.submenu.selected > a  {
 	border-bottom:none;
 }
 
-.modal-body {
-    height: 100%;
-    margin-bottom: 30px;
-    margin-left: auto;
-    margin-right: auto;
-	margin-top:15px;
-	padding-top: 5px;
-    max-height: 85%;
-}
-
 .modal-footer {
-    bottom: 0;
-    left: 0;
-    right: 0;	
-    position: absolute;
-	padding-top : 5px;
-	padding-bottom : 5px;
+	text-align:center;
 }
 
 .modal-infos {
-	text-align : center;
 	margin:0;
 	padding:0;
 }
