Fix Json-rpc - Fix Admin menu

--- a/src/stylesheets/perso.css
+++ b/src/stylesheets/perso.css
@@ -372,6 +372,13 @@ li.submenu.selected > ul  {
 	cursor:  move;
 }
 
+/* Viewlist */
+
+.view_list th , .view_list td {
+	vertical-align:middle;
+	text-align:center;
+}
+
 /*Plupload*/
 .plupload.html5 {
 	width:0 !important;
