--- a/src/stylesheets/perso.css
+++ b/src/stylesheets/perso.css
@@ -268,6 +268,7 @@ li.selected > a.thumbnail {
 	top: 50%; 
 	right: 8px;
 	cursor:pointer;
+	z-index:50;
 }
 
 .image_panel #next:hover {
@@ -284,6 +285,7 @@ li.selected > a.thumbnail {
 	top: 50%; 
 	left: 8px;
 	cursor:pointer;
+	z-index:50;
 }
 
 .image_panel #prev:hover {
