Mail receiver for add images in a album

--- a/src/stylesheets/perso.css
+++ b/src/stylesheets/perso.css
@@ -88,7 +88,7 @@ a {
 	width: 75% !important;	
 }
 
-#slideshow , #button_downloadorig,#button_vieworig {
+#slideshow , #button_downloadorig,#button_vieworig,#button_checkmail {
 	display:none;
 }
 
