--- a/src/stylesheets/perso.css
+++ b/src/stylesheets/perso.css
@@ -1,3 +1,6 @@
+div[id*="html5_api"] {
+	display:block;
+}
 mbody {
 	/*background: none repeat scroll 0 0 #DDDDDD;
 	background: none repeat scroll 0 0  ivory;*/
@@ -230,14 +233,14 @@ li.selected > a.thumbnail {
 	top:0;
 	left:0;
 	width:50px;
-	height:100%
+	bottom:30px;
 }
 .next {
 	position:absolute;
 	top:0;
 	right:0;
 	width:50px;
-	height:100%
+	bottom:30px
 }
 .image_panel #prev {
 	display:none;
@@ -458,6 +461,10 @@ li.submenu.selected > ul  {
 }
 .linear_panel {
 	display:none;
+}
+
+.video-js .vjs-tech {
+		position:static !important;	
 }
 
 }
